# spectertty

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  frame.rs  main.rs  processor.rs  pty.rs  recorder.rs
